--- a/智慧田园/智慧田园/Expert/MyReplyTableViewCell.xib
+++ b/智慧田园/智慧田园/Expert/MyReplyTableViewCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16A254g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -13,18 +13,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="360" id="KGk-i7-Jjw" customClass="MyReplyTableViewCell" customModule="智慧田园" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="840" height="360"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="343" id="KGk-i7-Jjw" customClass="MyReplyTableViewCell" customModule="智慧田园" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="568" height="343"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="840" height="359"/>
+                <rect key="frame" x="0.0" y="0.0" width="568" height="342"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pIr-rJ-kQD">
-                        <rect key="frame" x="10" y="0.0" width="549" height="150"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pIr-rJ-kQD">
+                        <rect key="frame" x="10" y="0.0" width="548" height="157"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" misplaced="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qj7-yF-kOt">
-                                <rect key="frame" x="15" y="10" width="285" height="184"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qj7-yF-kOt">
+                                <rect key="frame" x="15" y="10" width="478" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="qzy-74-JPD"/>
                                 </constraints>
@@ -38,20 +38,20 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2P9-w8-oTs">
-                                <rect key="frame" x="496" y="135" width="43" height="10"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2P9-w8-oTs">
+                                <rect key="frame" x="504" y="135" width="34" height="22"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jlQ-gs-6ca">
-                                        <rect key="frame" x="0.0" y="0.0" width="43" height="10"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="34" height="22"/>
                                         <fontDescription key="fontDescription" name="FZLTHK--GBK1-0" family="FZLanTingHei-R-GBK" pointSize="8"/>
-                                        <state key="normal" title="15分钟前" image="Forum_Time">
+                                        <state key="normal" title="15分钟前">
                                             <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" misplaced="YES" image="Forum_Photo2" translatesAutoresizingMaskIntoConstraints="NO" id="Dzr-uT-2cI">
-                                <rect key="frame" x="504" y="5" width="35" height="35"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" image="Forum_Photo2" translatesAutoresizingMaskIntoConstraints="NO" id="Dzr-uT-2cI">
+                                <rect key="frame" x="503" y="5" width="35" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="Gse-yD-tVD"/>
                                     <constraint firstAttribute="width" constant="35" id="i7d-C3-aUR"/>
@@ -67,7 +67,7 @@
                             <constraint firstItem="2P9-w8-oTs" firstAttribute="top" secondItem="Qj7-yF-kOt" secondAttribute="bottom" constant="15" id="LIp-S0-Ch4"/>
                             <constraint firstAttribute="trailing" secondItem="Dzr-uT-2cI" secondAttribute="trailing" constant="466" id="NQQ-WK-Kle"/>
                             <constraint firstItem="Qj7-yF-kOt" firstAttribute="top" secondItem="pIr-rJ-kQD" secondAttribute="top" constant="10" id="RQ9-BE-1bl"/>
-                            <constraint firstAttribute="bottom" secondItem="2P9-w8-oTs" secondAttribute="bottom" constant="5" id="gBr-46-jD5"/>
+                            <constraint firstAttribute="bottom" secondItem="2P9-w8-oTs" secondAttribute="bottom" id="gBr-46-jD5"/>
                             <constraint firstItem="Dzr-uT-2cI" firstAttribute="top" secondItem="pIr-rJ-kQD" secondAttribute="top" constant="5" id="hnG-Ty-dvA"/>
                             <constraint firstAttribute="trailing" secondItem="Qj7-yF-kOt" secondAttribute="trailing" constant="15" id="kvX-j5-X47"/>
                             <constraint firstItem="Qj7-yF-kOt" firstAttribute="leading" secondItem="pIr-rJ-kQD" secondAttribute="leading" constant="15" id="oVz-vz-t3J"/>
@@ -105,11 +105,10 @@
                 <outlet property="LabelContent" destination="Qj7-yF-kOt" id="q1d-xd-PRY"/>
                 <outlet property="newContentView" destination="pIr-rJ-kQD" id="Ttg-cH-Q97"/>
             </connections>
-            <point key="canvasLocation" x="465" y="385"/>
+            <point key="canvasLocation" x="373" y="357.5"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Forum_Photo2" width="30" height="30"/>
-        <image name="Forum_Time" width="9" height="9"/>
     </resources>
 </document>
